[tool.poetry]
name = "quranref"
version = "0.1.0"
description = ""
authors = ["Kashif Iftikhar <kashif@compulife.com.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
urllib3 = "1.26.15"
requests = "2.28.1"
fastapi = "0.95.2"
typer = "0.9.0"
arango-orm = "0.7.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "8.13.2"
uvicorn = "0.22.0"
ruff = "^0.0.270"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quranref_populate = 'quranref.scripts.populate:main'
quranref_import_surah_info = 'quranref.scripts.surah_info_import:main'
quranref_import_text = 'quranref.scripts.text_import:main'
quranref_make_words = 'quranref.scripts.make_words:main'

[tool.black]
line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # ignore assert_used

[tool.ruff]
line-length = 100
src = ["quranref"]