[project]
name = "quranref"
version = "2.0.0"
description = "QuranRef backend API service"
authors = [
    {name = "Kashif Iftikhar", email = "kashif@compulife.com.pk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.8.0",
    "typer>=0.15.1",
    "jinja2>=3.1.4",
    "arango-orm>=1.1.0",
    "six>=1.16.0",  # Required by arango-orm
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.18",
    "bandit>=1.8.0",
    "ipython>=8.31.0",
    "pre-commit>=4.0.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
]

[project.scripts]
quranref-cli = "quranref.cli:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["quranref"]

[tool.bandit]
exclude_dirs = ["tests"]
# B101 = ignore assert_used
# B404 = allow use of sub process module
# B603 = allow calls to Popen with shell=False
skips = ["B101", "B404", "B603"]

[tool.ruff]
line-length = 100
src = ["quranref"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=quranref --cov-fail-under=50"
testpaths = [
    "tests",
]

filterwarnings = [
    "ignore::DeprecationWarning",
]

env = [
    "QURANREF_TESTING=true"
]
